Parsing of text blocks